# book-guide-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY_SCAN.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AGENT_PLAYBOOK.md  README.md  USAGE.md
docs/assets/: README.md
docs/examples/: 01-socratic-tutor.md  02-avicenna-framework.md  03-import-your-book.md  04-challenge-avicenna-socratic.md  README.md
examples/: claude-desktop-mcp.json  cursor-mcp.json  sample_book.md  vscode-mcp.json
marketing/: LAUNCH_KIT.md  LISTING_STATUS.md
outreach/: LAUNCH_KIT.md  LISTING_STATUS.md  PRODUCT_HUNT.md  server.json
skills/avicenna-canon/: meta.json  skill.json
skills/avicenna-canon/curriculum/: curriculum.json
skills/avicenna-canon/frameworks/: index.json
skills/avicenna-canon/rubrics/: index.json
skills/socratic-method/: RIGHTS.md  SKILL.md  meta.json  skill.json
skills/socratic-method/excerpts/: index.json
skills/socratic-method/frameworks/: index.json
src/book_skills_mcp/: __init__.py  __main__.py  builder.py  models.py  paths.py  playbooks.py  search.py  security.py  server.py  store.py  tutor.py
src/book_skills_mcp/bundled_skills/avicenna-canon/: RIGHTS.md  SKILL.md  toc.json
src/book_skills_mcp/bundled_skills/avicenna-canon/excerpts/: index.json
src/book_skills_mcp/bundled_skills/avicenna-canon/playbooks/: index.json
src/book_skills_mcp/bundled_skills/socratic-method/: toc.json
src/book_skills_mcp/bundled_skills/socratic-method/curriculum/: curriculum.json
src/book_skills_mcp/bundled_skills/socratic-method/playbooks/: index.json
src/book_skills_mcp/bundled_skills/socratic-method/rubrics/: index.json
tests/: test_challenge_books.py  test_library.py  test_security.py
